# agent-mesh

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: adoption.md  configuration.md  migration.md  privacy.md
examples/n-agent/: run.sh  scenario.py
examples/solo-project/: run.sh
src/agent_mesh/: __init__.py  adoption.py  config.py  message_packet.py  project_registry.py  workbench.py  workbench_service.py
src/agent_mesh/adapters/: __init__.py  base.py  default.py
src/agent_mesh/cli/: __init__.py  mail.py  q.py
src/agent_mesh/core/: __init__.py  chain.py  dispatch_schema.py  events.py  external_recovery_plan.py  hashing.py  ids.py  lock.py  provenance.py  recovery.py  source_recovery.py  source_recovery_audit.py  source_recovery_promotion.py
src/agent_mesh/dispatch/: __init__.py  adapters.py  atomic.py  dispatch.py  emitter.py  eval.py  execution.py  grounding.py  guard.py  output_policy.py  runtime.py  types.py
src/agent_mesh/skill/: __init__.py  render.py
src/agent_mesh/store/: __init__.py  rebuild.py  sqlite.py
src/agent_mesh/views/: __init__.py  archive.py  inbox.py  log.py  outbox.py  rendering.py
